--- a/src/pages/categorias/categorias.html
+++ b/src/pages/categorias/categorias.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar>
-    <button ion-button>
+    <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>Categorias</ion-title>
