--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -1,3 +1,4 @@
+
 <ion-header>
   <ion-navbar>
     <button ion-button menuToggle>
@@ -9,8 +10,23 @@
 
 <ion-content padding>
   <ion-avatar>
-    <img class="circle" [src]="clienteDTO?.imageUrl || 'assets/imgs/avatar-blank.png'">
+    <img class="circle" [src]="profileImage">
   </ion-avatar>
-  <h2 text-center>{{clienteDTO?.nome}}</h2>
-  <p text-center>{{clienteDTO?.email}}</p>
+  <h2 text-center>{{cliente?.nome}}</h2>
+  <p text-center>{{cliente?.email}}</p>
+
+  <ion-card>
+    <ion-card-header>
+      Enviar imagem de perfil
+    </ion-card-header>
+    <ion-item *ngIf="picture">
+      <img [src]="picture">
+    </ion-item>
+    <ion-item>
+      <button ion-button block (click)="getCameraPicture()" [disabled]="cameraOn">Camera</button>
+      <button ion-button block (click)="getGalleryPicture()" [disabled]="cameraOn">Galeria</button>
+      <button *ngIf="picture" ion-button outline block (click)="sendPicture()">Enviar imagem</button>
+      <button *ngIf="picture" ion-button outline block (click)="cancel()">Descartar imagem</button>
+    </ion-item>
+  </ion-card>  
 </ion-content>
